Use consistent colors for GlassBrowserFrameView titlebar features

This CL fixes color inconsistency between the title and the caption
buttons on Windows 10 when theme colors are used in PWA windows.

Before: https://bugs.chromium.org/p/chromium/issues/attachment?aid=354609&signed_aid=XZviD7H5PrdO2M-73ui7Tw==&inline=1
After: https://bugs.chromium.org/p/chromium/issues/attachment?aid=354795&signed_aid=Av8_PIND8_gosBPPahgKFw==&inline=1

Bug: 872118
Change-Id: I7dcc27aa480ca43746ca65bb8a60561d99e47e99
Reviewed-on: https://chromium-review.googlesource.com/1186929
Reviewed-by: Bret Sepulveda <bsep@chromium.org>
Commit-Queue: Alan Cutter <alancutter@chromium.org>
Cr-Commit-Position: refs/heads/master@{#586228}
Former-commit-id: 1e7a9ee8ed02f71e8b5cb31e551c8611babedd59